fixed issue where navbar wrapped underneath logo

--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -90,13 +90,13 @@ header
 		font-family: 'Merriweather', serif;
 		float: right;
 		clear: none;
-		margin-right: 100px;
+		margin-right: 25px;
 		margin-top: 35px;
 		> a
 		{
 			cursor: pointer;
 			display: inline-block;
-			margin-left: 50px;
+			margin-left: 20px;
 			text-decoration: none;
 			color: white;
 			border-bottom: 3px solid $green;
